Closed
Bug 1482847
Opened 7 years ago
Closed 7 years ago
Unable to play videos on YouTube on mobile devices with Android 9
Categories
(Firefox for Android Graveyard :: Audio/Video, defect)
Tracking
(geckoview62 wontfix, firefox61 wontfix, firefox62 wontfix, firefox63+ verified)
VERIFIED
FIXED
Firefox 63
People
(Reporter: oanaarbuzov, Assigned: jya)
References
(
URL
)
Details
(Whiteboard: [needsdiagnosis])
Attachments
(2 files)
[Environment:]
Browser / Version: Firefox Nightly 63.0a1 (2018-08-11)
Operating System: Google Pixel (Android 9) - 1080 x 1920 pixels (~441 ppi pixel density)
[Steps to Reproduce:]
1. Navigate to https://m.youtube.com/watch?v=hWMKinHNZBs#
2. Tap to play the video.
3. Observe the behavior.
[Expected Behavior:]
Video plays.
[Actual Behavior:]
Videos does not play.
[Console:]
Load denied by X-Frame-Options: https://accounts.google.com/ServiceLogin?uilel=3&continue=https%3A%2F%2Fm.youtube.com%2Fsignin%3Ffeature%3Dmobile_passive%26next%3Dhttps%253A%252F%252Fm.youtube.com%252Fsignin_passive%26app%3Dm%26noapp%3D1%26action_handle_signin%3Dtrue%26hl%3Den&passive=true&service=youtube<mpl=mobile&hl=en does not permit framing.
[Note:]
1. Not reproducible on Huawei P10 (Android 7.0) - 1080 x 1920 pixels (~432 ppi pixel density) and Samsung Galaxy S7 Edge (Android 8.0.0) - Resolution 1440 x 2560 pixels (~534 ppi pixel density)
2. Verified with other videos:
https://m.youtube.com/watch?v=LCet4yrfp4o
https://m.youtube.com/watch?v=YyknBTm_YyM
https://m.youtube.com/watch?v=YFD2PPAqNbw
3. Using Mozregression I found:
10:09.69 INFO: Last good revision: 56aaeff290b7cbe2b9efc43ef8a651049c3fe6b0
10:09.69 INFO: First bad revision: 47091a68bf3a7f0706cab19f00c414134a63a787
10:09.69 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=56aaeff290b7cbe2b9efc43ef8a651049c3fe6b0&tochange=47091a68bf3a7f0706cab19f00c414134a63a787
This links back to https://bugzilla.mozilla.org/show_bug.cgi?id=1480190.
Updated•7 years ago
|
Hardware: Unspecified → ARM
| Reporter | ||
Comment 1•7 years ago
|
||
Added screenshot.
Comment 2•7 years ago
|
||
Setting this as tracking 63, as this is a regression from bug 1480190.
Blocks: 1480190
tracking-firefox63:
--- → ?
Flags: needinfo?(drno)
Keywords: regression
Whiteboard: [needsdiagnosis]
Comment 3•7 years ago
|
||
Also, my clipboard ate the last sentence. Niels, do you have any idea why this might happen here?
| Assignee | ||
Comment 4•7 years ago
|
||
The console error indicates that something else is happening here.
Comment 5•7 years ago
|
||
Disabling media.media-capabilities.enabled and restarting Fennec restores playback, and Oana did test with mozregression and the pref change is definitely the turning point. We are probably running into a different codepath now, or something like this.
I can confirm the behavior from comment #5 on my Pixel 2 running 9.0.
Updated•7 years ago
|
| Assignee | ||
Comment 8•7 years ago
|
||
The issue appears to be linked to bug 1484000. Which in turn expose a bug in YouTube.
Here we're unable to instantiate a VP9 decoder, which causes all decodingInfo promise to be resolved with not supported.
YouTube never falls back to another codec then...
Comment 9•7 years ago
|
||
Videos from cnn.com and vimeo, or audio podcasts from ft.com don't work either.
| Assignee | ||
Comment 10•7 years ago
|
||
Yes, H264 is broken, this isn't a problem due to Media Capabilities.
No MediaCodec decoder can be instantiated on Android 9.
With MediaCapabilities disabled, the side effect is that it allows the VP9 software decoder to be used...
Comment 11•7 years ago
|
||
The issue is reproducible on Huawei MediaPad M2 (Android 5.1.1)
| Assignee | ||
Comment 12•7 years ago
|
||
A mDisplay vs mImage mixup. We also set both values in CreateTrackInfoWithMIMETypeAndContainerTypeExtraParameters to prevent similar issues in the future.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → jyavenard
| Assignee | ||
Comment 14•7 years ago
|
||
(In reply to Oana Horvath from comment #9)
> Videos from cnn.com and vimeo, or audio podcasts from ft.com don't work
> either.
both works for me on a Google Pixel with Android 9, and neither are using media capabilities.
Comment 15•7 years ago
|
||
Comment on attachment 9002462 [details]
Bug 1482847 - Fix android decoder creation. r?jolin
John Lin [:jolin][:jhlin] has approved the revision.
Attachment #9002462 -
Flags: review+
Comment 16•7 years ago
|
||
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f5e54bee352f
Fix android decoder creation. r=jolin
Comment 17•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 63
John, we need to get this uplifted to 62 or the GeckoView 62 branch. Can you please request?
Flags: needinfo?(jlin)
Flipping 61/62 to affected since AFAIK this wasn't really a regression from 1480190.
| Assignee | ||
Comment 20•7 years ago
|
||
The MediaCapabilities change was only in 63. Afaik, while the fix could help, I'm not sure it's that necessary
Comment 21•7 years ago
|
||
Clear the ni request (to Jonathan Lin).
Agree with what Jean-Yves said, this bug only affects 63 and the sites that use MediaCapabilities. 62 should be fine without it.
Flags: needinfo?(jlin)
| Reporter | ||
Comment 22•7 years ago
|
||
The issue seems to be fixed now on Firefox Nightly 63.0a1 (2018-08-30).
[Tested with:]
Operating System: Google Pixel (Android 9) - 1080 x 1920 pixels (~441 ppi pixel density)
Status: RESOLVED → VERIFIED
Resolution: FIXED → WORKSFORME
| Assignee | ||
Updated•7 years ago
|
Resolution: WORKSFORME → FIXED
Comment 23•7 years ago
|
||
Per comment 20, it sounds like this doesn't need uplift.
Updated•7 years ago
|
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•