Bug 1482847 - Fix android decoder creation. r=jolin

A mDisplay vs mImage mixup. We also set both values in CreateTrackInfoWithMIMETypeAndContainerTypeExtraParameters to prevent similar issues in the future.

Differential Revision: https://phabricator.services.mozilla.com/D3788

--HG--
extra : moz-landing-system : lando