dom/media/VideoUtils.cpp
@@ -747,10 +747,12 @@ CreateTrackInfoWithMIMETypeAndContainerTypeExtraParameters(
       Maybe<int32_t> maybeWidth = aContainerType.ExtendedType().GetWidth();
       if (maybeWidth && *maybeWidth > 0) {
         videoInfo->mImage.width = *maybeWidth;
+        videoInfo->mDisplay.width = *maybeWidth;
       }
       Maybe<int32_t> maybeHeight = aContainerType.ExtendedType().GetHeight();
       if (maybeHeight && *maybeHeight > 0) {
         videoInfo->mImage.height = *maybeHeight;
+        videoInfo->mDisplay.height = *maybeHeight;
       }
     } else if (trackInfo->GetAsAudioInfo()) {
       AudioInfo* audioInfo = trackInfo->GetAsAudioInfo();
